# nostr-tossup

./: .gitignore  AGENTS.md  DEPENDENCIES.md  README.ja.md  README.md  data.sqlite3  dune-project  nostr-tossup.opam
docs/: bip340.md
lib/: bip340.ml  bot_checker.ml  config.ml  database.ml  dune  env.ml  kind30078_publisher.ml  nip19.ml  nostr_connection.ml  nostr_ephemeral_pool.ml  nostr_event.ml  nostr_publish.ml  nostr_subscribe.ml  nostr_utils.ml  text_utils.ml  user_classifier.ml  user_ingest.ml  user_repository.ml
scripts/: backup.sh  setup-cron.sh
sql/: backup.sql  schema.sql  seeds.sql
test/: dune  test_nostr_tossup.ml
